# prdraft

./: .gitignore  .tool-versions  Makefile  README.md  config.toml  fake_token  main.py  pyproject.toml
.github/prompts/: translation.prompt.md
src/blanketml/: __init__.py  config.py  file.py  finetuning.py  main.py  markdown.py  openai.py  parser.py
src/blanketml/model/: gemini.py  openai.py
src/gemini-onagigawa/: gemini-extension.json
src/gemini/commands/: create_pull_request.toml
src/migration/: 000_init.sql  001_embeddings.sql
src/onagigawa/: __init__.py  args.py  embed.py  mcp.py  metadata.py  patch.py  pr.py  pull_request.py  repository.py
src/prdraft/: __init__.py  args.py  embed.py  fetch.py  init.py  mcp.py  repository.py  tokenizer.py  upgrade.py
src/prdraft/pullrequest/: __init__.py  github.py  storage.py  summary.py
tests/: config.toml  config_test.py  parser_test.py  temp_test.py  test_args.py  test_temp.py
tests/test_prdraft/: test_args.py  test_embed.py  test_init.py  test_repository.py
tests/test_prdraft/pullrequest/: test_storage.py
