[project]
name = "onagigawa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.45",
    "requests>=2.32.5",
]

[project.scripts]
# package.module:func
onagigawa= "onagigawa:main"
[tool.pyright]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.uv]
package = true

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ipython>=9.6.0",
    "pyright>=1.1.406",
]
