[project]
name = "onagigawa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.0",
    "gitpython>=3.1.45",
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.10",
    "mcp>=1.18.0",
    "requests>=2.32.5",
]

[project.scripts]
# package.module:func
onagigawa= "onagigawa:main"
prdraft= "prdraft:main"
[tool.pyright]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.uv]
package = true

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ipython>=9.6.0",
    "pyright>=1.1.406",
]
