[project]
name = "onagigawa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.0",
    "gitpython>=3.1.45",
    "huggingface-hub[cli]>=0.36.0",
    "langchain>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.10",
    "mcp>=1.18.0",
    # duckdb get_current_timestamp needs pytz
    "ollama>=0.6.0",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
]

[project.scripts]
# package.module:func
onagigawa= "onagigawa:main"
prdraft= "prdraft:main"
[tool.pyright]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.uv]
package = true

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ipython>=9.6.0",
    "pyright>=1.1.406",
]
